# NonMarkovianMethods

./: .coverage  .gitignore  404.html  README.md  example numpy.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: continous_integration.yml  documentation.yml
api/: index.html
cumulant/: __init__.py  baths.py  cumulant.py  example numpy.ipynb  example qutip.ipynb  example.ipynb  integrals.pyx  utils.py
doc/: index.html  search.js
doc/cumulant/: cumulant.html  utils.html
docs/: api.md  example numpy.ipynb  example_qutip.ipynb  example_qutip_onebath.ipynb  index.md  julia.ipynb
example_qutip/: index.html
nmm/: __init__.py
nmm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nmm/cumulant/: __init__.py  _cumulant.c  _cumulant.pyx  cum.c  cum.pyx  cumulant.py  refined.py  testing.ipynb
nmm/cumulant/.ipynb_checkpoints/: testing-checkpoint.ipynb
nmm/redfield/: __init__.py  br.py  redfield.py
nmm/tests/: test_baths.py  test_cumulant.py  test_utils.py
nmm/utils/: __init__.py  baths.py  testing_jitting.ipynb  utils.py
search/: search_index.json
tests/: test_cumulant.py
theory/: index.html
tutorial/: index.html
